Add docs on how to run Spring Boot apps using script